# test-app-onnx

./: .gitignore  Cargo.toml  Makefile
scripts/: midas_cli
