[package]
name = "onnx-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
image = "0.24.1"
log = "0.4.17"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ort = { version = "1.14.6", features = ["download-binaries", "copy-dylibs", "half", "copy-dylibs", "load-dynamic"] }
rand = "0.8.5"
# tract-onnx = "0.16.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
tracing-subscriber = "0.3.17"
