[package]
name = "onnx-app"
version = "0.1.0"
edition = "2021"
description = "ONNX test application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
image = "0.24.1"
log = "0.4.17"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
ort = { version = "1.14.6", features = ["download-binaries", "copy-dylibs", "half", "copy-dylibs", "load-dynamic"] }
rand = "0.8.5"
# tract-onnx = "0.16.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }

[[bin]]
name = "midas_cli"
src = "src/bin/midas_cli.rs"

[package.metadata.deb]
maintainer = "FUJINAKA Fumiya <uzuna.kf@gmail.com>"
copyright = "2023, FUJINAKA Fumiya <uzuna.kg@gmail.com>"
assets = [
    ["target/release/libonnxruntime.so", "usr/local/share/onnx-app/", "755"],
    ["target/release/midas_cli", "usr/local/share/onnx-app/", "755"],
    ["scripts/midas_cli", "usr/local/bin/midas_cli", "755"],
]
